--- a/static/css/base.css
+++ b/static/css/base.css
@@ -340,6 +340,10 @@ hr {
     margin: 5px;
 } 
 
+.post-comment a {
+    margin-bottom: 10px;
+}
+
 .comment-title img {
     border-radius: 50%;
     border: 2px solid #30362F;
